--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,6 +3,9 @@
     {{- $footerLinks_Ex = "footer-links-ex" }}
 {{- end }}
 <footer id="page-footer" class="footer">
+    {{- if and (eq $.Site.Params.product "Garoon") (eq $.Site.Params.service_type_id "on-premise") -}}
+        {{ partial "footer_gr6.html" . }}
+    {{- else -}}
     <div class="footer-wrap">
         <div class="footer-col-links">
             <div class="footer-links {{$footerLinks_Ex}}">
@@ -70,4 +73,5 @@
         {{- end }}
         </div>
     </div>
+    {{- end -}}
 </footer>
