--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -124,6 +124,9 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
     {{- end}}
 
+    {{- if and (eq $.Site.Params.product "Garoon") (eq $.Site.Params.service_type_id "on-premise") -}}
+    <script src="{{ printf "%s?%s" "javascripts/custom_gr6.js" $buildnum | relURL }}"></script>
+    {{- end -}}
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
