--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -28,7 +28,7 @@
                     </a>
                 </h1>
             </div>
-  
+
         {{- $glang := $.Site.Language.Lang}}
         {{- $disp_sbox := true }}
         {{- if eq .Params.type "search_result" }}
@@ -46,10 +46,10 @@
                 {{- $glang = "zh-TW" }}
             {{- end }}
 
-            <div id="search" class="search-wrap">
-                <form id="headerSearchBox_form" action="{{ "" | relURL }}{{.Lang}}/search_result.html" onsubmit='if(document.getElementById("headerSearchBox_input").value==""){return false;}' role="search" >
+            <div id="search" class="search-wrap {{ if and (eq $.Site.Params.product "Garoon") (eq $.Site.Params.service_type_id "on-premise") (eq .Params.type "gr6/home" ) }}header-search-wrap {{ end }}">
+                <form id="searchBox_form" action="{{ "" | relURL }}{{.Lang}}/search_result.html" onsubmit='if(document.getElementById("headerSearchBox_input").value==""){return false;}' role="search" >
                     <div class="searchbox">
-                        <input type="search" name="q" id="headerSearchBox_input" class="search-input" role="searchbox" aria-label='{{i18n "search_word"}}' placeholder='{{i18n "Enter_keywords"}}'>
+                        <input type="search" name="q" id="headerSearchBox_input" class="search-input home-search-input" role="searchbox" aria-label='{{i18n "search_word"}}' placeholder='{{i18n "Enter_keywords"}}'>
                         <button type="submit" class="search-submit" data-disable-with="" aria-label='{{i18n "search"}}'></button>
             {{- if ne .Site.Params.google_search true }}
                         <input type="hidden" name="ct" value="{{ .Site.Language.Params.search_all }}">
@@ -62,10 +62,10 @@
             <script src="https://www.gstatic.com/prose/brand.js" targetId="headerSearchBox_input" hl="{{$glang}}"></script>
             {{- end }}
         {{- end }}
-        
+
         {{- if and .IsTranslated (eq .Site.Params.langSelector true) }}
             {{ partial "langselector" . }}
         {{- end}}
-        
+
         </div>
     </header>
