--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -123,7 +123,9 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@1.2.2/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
     {{- end}}
-
+    {{- if eq .Params.type "gr6/home" }}
+    <script src="https://unpkg.com/vue@3.3.4/dist/vue.global.prod.js"></script>
+    {{- end }}
     {{- if and (eq $.Site.Params.product "Garoon") (eq $.Site.Params.service_type_id "on-premise") -}}
     <script src="{{ printf "%s?%s" "javascripts/custom_gr6.js" $buildnum | relURL }}"></script>
     {{- end -}}
