--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -231,14 +231,20 @@
   width: 33.333%;
 }
 
-.g-col:nth-child(n+4) {
+.g-col:nth-child(4) {
+  border-top: 1px solid #ccc;
+}
+
+.g-col:nth-child(-n+4) {
   width: 25%;
+  border-bottom: 1px solid #ccc;
 }
 
 .g-col:nth-child(3n) {
   border-right: 1px solid #ccc;
 }
 
+.g-col:nth-child(4),
 .g-col:last-child {
   border-right: 0;
 }
@@ -295,6 +301,10 @@
 
   .g-col {
     width: 33.333%;
+  }
+
+  .g-col:nth-child(4){
+    border-right: 1px solid #ccc;
   }
 
   .home-search {
@@ -410,12 +420,10 @@
   }
 }
 
-@media only screen and (min-width:1059px) {
-  .g-col {
+@media only screen and (min-width: 1059px) {
+  .g-col:nth-child(n+1) {
     width: 14%;
-  }
-  .g-col:nth-child(n+4) {
-    width: 14%;
+    border-bottom: 0;
   }
 
   .footer-mega-list {
