--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -249,6 +249,10 @@
   border-right: 0;
 }
 
+.gcol-title-icon {
+  display: none;
+}
+
 @media only screen and (min-width: 768px) {
 
   .footer-mega {
@@ -305,6 +309,10 @@
 
   .g-col:nth-child(4){
     border-right: 1px solid #ccc;
+  }
+
+  .gcol-title-icon {
+    display: inline;
   }
 
   .home-search {
@@ -421,6 +429,7 @@
 }
 
 @media only screen and (min-width: 1059px) {
+
   .g-col:nth-child(n+1) {
     width: 14%;
     border-bottom: 0;
