--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -88,6 +88,7 @@
   width: 50%;
   min-width: 0;
   padding: 16px;
+  color: var(--color-secondary);
 }
 
 .home-menu-item:nth-child(odd) {
@@ -106,6 +107,10 @@
 .home-menu-item:last-child,
 .home-menu-item:nth-last-child(2):nth-child(odd) {
   border-bottom: 0;
+}
+
+.home-menu-item-title-container {
+  display: block;
 }
 
 .home-menu-item-title {
