--- a/layouts/gr6/home/index.html
+++ b/layouts/gr6/home/index.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="content-wrap">
-                {{- template "content" (dict "icon_main" $.Site.Params.icon_home_main "icon_sub" $.Site.Params.icon_home_sub ) -}}
+                {{- template "content" -}}
             </div>
         </main>
     </div>
@@ -62,14 +62,14 @@
                     <div v-bind:pid="menu.id" class="home-menu-maintitle">
                         <div
                             class="home-menu-maintitle-img"
-                            style="background-image: url('{{ .icon_main | relURL }}')"
+                            v-bind:style="{ backgroundImage: 'url(' + menu.icon + ')' }"
                         ></div>
                         <h2 class="home-menu-maintitle-text">[[menu.name]]</h2>
                     </div>
                     <div v-if="menu.sub" class="home-menu-subtitle">
                         <div
                             class="home-menu-subtitle-img"
-                            style="background-image: url('{{ .icon_sub | relURL }}')"
+                            v-bind:style="{ backgroundImage: 'url(' + menu.sub.icon + ')' }"
                         ></div>
                         <div class="home-menu-subtitle-text">
                             <a v-bind:href="menu.sub.link_href">[[menu.sub.title]]</a>
