--- a/layouts/partials/footer_gr6.html
+++ b/layouts/partials/footer_gr6.html
@@ -27,7 +27,7 @@
                     <div class="footer-mega-list-title">
                         <div
                             class="footer-mega-list-title-img"
-                            style="background-image: url('{{ $.Site.Params.icon_home_main | relURL }}')"
+                            style="background-image: url('{{ $.Site.Params.icon_footer | relURL }}')"
                         ></div>
                         <div class="footer-mega-list-title-text">{{ $category_title }}</div>
                     </div>
