--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -115,8 +115,8 @@
   align-self: center;
 }
 
-.home-menu-item-text {
   line-height: 1;
+.home-menu-item-title-text {
   flex: 1;
   padding-top: 2px;
 }
