--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -342,6 +342,10 @@
     color: var(--color-body);
   }
 
+  .home-menu:nth-child(n+2) {
+    padding-top: 16px;
+  }
+
   .home-menu-title {
     display: flex;
     background-color: var(--bg-primary-color);
