--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -377,13 +377,13 @@
   }
 
   .home-menu-list {
-    margin: 24px 0 0 52px;
+    margin: 24px 52px 0 52px;
     gap: 16px;
     border-bottom: 0px;
   }
 
   .home-menu-item {
-    width: calc(25% - 16px);
+    width: calc(50% - 16px);
     min-width: 250px;
     border: 1px solid var(--border-color);
     border-radius: 8px;
@@ -431,8 +431,13 @@
   }
 }
 
-@media only screen and (min-width: 1059px) {
+@media only screen and (min-width: 967px) {
+  .home-menu-item {
+    width: calc(33.3333% - 16px);
+  }
+}
 
+@media only screen and (min-width: 1059px) {
   .g-col:nth-child(n+1) {
     width: 14%;
     border-bottom: 0;
@@ -440,5 +445,11 @@
 
   .footer-mega-list {
     column-gap: 64px;
+  }
+}
+
+@media only screen and (min-width: 1232px) {
+  .home-menu-item {
+    width: calc(25% - 16px);
   }
 }
