--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -117,7 +117,7 @@
 
 .home-menu-item-title-text {
   line-height: 1.2;
-  font-size: 1.25rem;
+  padding-top: 2px;
   flex: 1;
 }
 
@@ -416,6 +416,8 @@
 
   .home-menu-item-title-text {
     flex: 1;
+    padding-top: 1px;
+    font-size: 1.25rem;
   }
 
   .home-menu-item-admin {
