--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -202,6 +202,7 @@
   height: 24px;
   background-size: contain;
   align-self: center;
+  background-repeat: no-repeat;
 }
 
 .footer-mega-list-list {
