Use font-awesome

--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -187,22 +187,21 @@
 }
 
 .footer-mega-list-title {
-  font-size: 0.875rem;
-  font-weight: 800;
-  display: flex;
-  gap: 8px;
   line-height: 1;
-}
-.footer-mega-list-title-text {
-  align-self: center;
+  color: var(--color-secondary);
 }
 
-.footer-mega-list-title-img {
-  width: 24px;
-  height: 24px;
-  background-size: contain;
-  align-self: center;
-  background-repeat: no-repeat;
+.footer-mega-list-title i {
+  font-size: 1.25rem;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+
+.footer-mega-list-title-text {
+  font-size: 0.875rem;
+  font-weight: 800;
+  vertical-align: middle;
+  margin-left: 8px;
 }
 
 .footer-mega-list-list {
@@ -292,7 +291,11 @@
     justify-content: center;
   }
 
-  .footer-mega-list-title {
+  .footer-mega-list-title i {
+    font-size: 1.5rem;
+  }
+
+  .footer-mega-list-title-text {
     font-size: 1.25rem;
   }
 
