--- a/layouts/partials/footer_gr6.html
+++ b/layouts/partials/footer_gr6.html
@@ -27,11 +27,8 @@
                         {{ end }}
                     {{ end }}
                     <div class="footer-mega-list-title">
-                        <div
-                            class="footer-mega-list-title-img"
-                            style="background-image: url('{{ $.Site.Params.icon_footer | relURL }}')"
-                        ></div>
-                        <div class="footer-mega-list-title-text">{{ $category_title }}</div>
+                        <i class="fa fa-book" aria-hidden="true"></i>
+                        <span class="footer-mega-list-title-text">{{ $category_title }}</span>
                     </div>
                     <ul class="footer-mega-list-list">
                         {{- range $links }}
