Sick color https://bozuman.cybozu.com/k/#/space/3701/thread/76379/4476825/8629527

--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -6,12 +6,11 @@
   --link-primary-color: #1b72cd;
   --link-secondary-color: #fff;
   --border-color: #c9c9c9;
-  --grn-color: #0e74dd;
 }
 
 .home-search {
   display: none;
-  background-color: var(--grn-color);
+  background-color: #015aaa;
 }
 
 .home-search-input {
