--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -229,6 +229,11 @@
       }
     }
 
+/* コードブロックで利用する設定 ********************************************/
+.codeblock-wrapper + p {
+  margin-top: 0.9em;
+}
+
 /* 768px以上の設定 *****************************************************/
     @media only screen and (min-width:768px){
     .logo-img {
