--- a/static/stylesheets/custom_kin.css
+++ b/static/stylesheets/custom_kin.css
@@ -1,4 +1,10 @@
 /* コードブロックで利用する設定 ********************************************/
+.codeblock-wrapper {
+    border-radius: 4px;
+}
+.codeblock-copy-button {
+    top: 10px;
+}
 .codeblock-wrapper + p {
     margin-top: 0.9em;
 }
