レビュー結果の修正

--- a/static/stylesheets/custom_kin.css
+++ b/static/stylesheets/custom_kin.css
@@ -1,9 +1,8 @@
 /* コードブロックで利用する設定 ********************************************/
-.highlight pre {
+.article pre {
     border-radius: 4px;
 }
 .codeblock-copy-button {
-    right: 4px;
     top: 10px;
 }
 .codeblock-wrapper + p {
