--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -233,6 +233,9 @@
 .highlight pre {
   border-radius: 4px;
 }
+.codeblock-copy-button {
+  top: 10px;
+}
 .codeblock-wrapper + p {
   margin-top: 0.9em;
 }
