--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -230,7 +230,7 @@
     }
 
 /* コードブロックで利用する設定 ********************************************/
-.highlight pre {
+.article pre {
   border-radius: 4px;
 }
 .codeblock-copy-button {
