--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -359,13 +359,14 @@
 
   .home-menu {
     padding: 40px;
+    scroll-margin-top: calc(56px - 16px);
     max-width: 1320px;
     margin: 0 auto;
     color: var(--color-body);
   }
 
   .home-menu:nth-child(n+2) {
-    padding-top: 16px;
+      padding-top: 16px;
   }
 
   .home-menu-title {
