Searchbox not works

--- a/layouts/gr6/home/index.html
+++ b/layouts/gr6/home/index.html
@@ -13,9 +13,9 @@
             <div class="home-search">
                 <div class="search-wrap">
                     <form
-                        id="headerSearchBox_form"
+                        id="homeSearchBox_form"
                         action="{{ "" | relURL }}{{ .Lang }}/search_result.html"
-                        onsubmit='if(document.getElementById("headerSearchBox_input").value==""){return false;}'
+                        onsubmit='if(document.getElementById("homeSearchBox_form").value==""){return false;}'
                         role="search"
                     >
                         <div class="searchbox">
