--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
             <div class="wrapper">
                 {{- $toptitle := (i18n "Welcome" .) }}
                 <div class="welcome_message">{{$toptitle}}</div>
-                {{- if and (eq $.Site.Params.product "Garoon") (eq $.Site.Params.service_type_id "on-premise") -}}{{ else}}
+                {{- if and (eq $.Site.Params.product "Garoon") (eq $.Site.Params.service_type_id "on-premise") -}}{{- else -}}
                 <div class="search-wrap">
                     <form id="headerSearchBox_form" action="{{ "" | relURL }}{{.Lang}}/search_result.html"　onsubmit='if(document.getElementById("headerSearchBox_input").value==""){return false;}' role="search">
                         <div class="searchbox">
@@ -28,7 +28,7 @@
                     </form>
                     <div id="logo_place" class="search-logo"></div>
                 </div>
-                {{end}}
+                {{- end -}}
               <nav class="col-flex">
                     {{ .Content }}
               </nav>
